<resources>
    <string name="app_name">Weather</string>

    <string name="title_today">Today</string>
    <string name="title_forecast">Forecast</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_text">Navigation item</string>

    <string name="description_weather_text">Weather - day</string>
    <string name="temperature_weather_text">mTemperature °C</string>
    <string name="home_degree">24°</string>
    <string name="home_humidity">82%</string>
    <string name="home_precipitation">2 mm</string>
    <string name="home_pressure">984 hPa</string>
    <string name="home_wind">12 km/h</string>
    <string name="home_direction">SE</string>
    <string name="home_city">San Francisco</string>
    <string name="home_weather_description">Light Rain</string>
    <string name="unit_of_length">Unit of length</string>
    <string name="unit_of_temperature">Unit of mTemperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="meter">Meter</string>
    <string name="miles">Miles</string>
    <string name="about_credits">Weather app made by Michal Polic.</string>
    <string name="ok">OK</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
