<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#EEEEEE">

    <ListPreference
        android:key="unit_of_length"
        android:title="@string/unit_of_length"
        android:summary="%s"
        android:dialogTitle="@string/unit_of_length"
        android:entries="@array/length_unit"
        android:entryValues="@array/length_unit"
        android:defaultValue="@string/meter"/>

    <ListPreference
        android:key="unit_of_temperature"
        android:title="@string/unit_of_temperature"
        android:summary="%s"
        android:dialogTitle="@string/unit_of_temperature"
        android:entries="@array/temperature_unit"
        android:entryValues="@array/temperature_unit"
        android:defaultValue="@string/celsius"/>

</PreferenceScreen>